# tamp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.44ecb53
apps/: CMakeLists.txt  CMakeLists.txt.orig
apps/DomainPlayer/: CMakeLists.txt  LGP-symbols.g  Makefile  boxes.kvg  boxes_new.kvg  main.cpp  planBetter.kvg
apps/lgp-collision-avoidance/: CMakeLists.txt  main.cpp  model_boxes.g
apps/lgp-gjk/: CMakeLists.txt  main.cpp  model.g  model_ca_check.g
apps/lgp-seq-boxes/: CMakeLists.txt  main.cpp
apps/lgp-seq-po-blocks/: CMakeLists.txt  main.cpp  model.g
apps/lgp-tree-po-blocks_mlr/: CMakeLists.txt  LGP-blocks-fol.g  LGP-blocks-kin-2w.g  LGP-blocks-kin.g  LGP-blocks-kin_seq.g  MT.cfg  Makefile  main.cpp  policy-0.gv  shelf_door.g
apps/lgp-tree-po-self-driving/: CMakeLists.txt  LGP-blocks-fol-2w.g  LGP-blocks-kin.g  LGP-overtaking-1w.g  LGP-overtaking-2w.g  LGP-overtaking-3w.g  LGP-overtaking-kin-1w.g  LGP-overtaking-kin-2w.g  LGP-overtaking-kin-2w_bis.g  LGP-overtaking-kin-3w.g  LGP-speed-N-1w.g  LGP-speed-kin-1w.g  MT.cfg  TODO  main.cpp
apps/tmkit-path-evaluator/: CMakeLists.txt  main.cpp
apps/tmkit-path-evaluator/baxter-blocks-comparison/: sussman-start-4.robray  tm-blocks.py
apps/tmkit-path-evaluator/data/: lockboxNew.ors
apps/tmkit-path-evaluator/data/baxter_model/: baxter-clean.ors  baxter-lockbox.ors  baxter.ors  baxter_base.gazebo.xacro
apps/tmkit-path-evaluator/data/baxter_model/retired/: baxter-modifications.ors
apps/tmkit-path-evaluator/data/pr2_model/: pr2_approx.ors  pr2_left_arm.ors
apps/tmkit-path-evaluator/data/pr2_model/retired/: pr2_clean_16-08-09.ors
libs/CollisionAvoidance/: CMakeLists.txt  Makefile  approx_shape_to_sphere.cpp  approx_shape_to_sphere.h  axis_alignment.cpp  axis_alignment.h  occupancy_grid.cpp  occupancy_grid.h  over_plane.cpp  over_plane.h  shape_pair_fcl.cpp  shape_pair_fcl.h  vertical_velocity.cpp  vertical_velocity.h
libs/CollisionAvoidance/test/: CMakeLists.txt
libs/CollisionAvoidance/test/data/: LGP-overtaking-kin-2w_bis.g  LGP-overtaking-kin.g  LGP-overtaking-single-agent-2w.po
libs/GeometricUtilityTasks/: CMakeLists.txt  Makefile  axis_bound.cpp  axis_bound.h  axis_distance.cpp  axis_distance.h  car_kinematic.cpp  car_kinematic.h  circular_obstacle.h  geom_utility.cpp  geom_utility.h  road_bound.cpp  road_bound.h  velocity.h
libs/GeometricUtilityTasks/test/: CMakeLists.txt  test_geom_utility.cpp
libs/GeometricUtilityTasks/test/data/: LGP-merging-kin.g  LGP-mono-car.g  LGP-overtaking-double-agent-1w-tweaked.po  LGP-overtaking-double-agent-2w.po  LGP-overtaking-single-agent-1w.po  LGP-overtaking-single-agent-1w_.po
libs/HessianDecomposition/: CMakeLists.txt
libs/HessianDecomposition/include/HessianDecomposition/: hessian_decomposition.h  utils.h
libs/HessianDecomposition/src/: hessian_decomposition.cpp  ngraph.cpp
libs/HessianDecomposition/test/: CMakeLists.txt  test_hessian_decomposition.cpp  test_ngraph.cpp
libs/MathUtility/: CMakeLists.txt  belief_state.cpp  belief_state.h  graph_node.cpp  graph_node.h  math_utility.cpp  math_utility.h
libs/MathUtility/test/: CMakeLists.txt  test_graph_node.cpp
libs/MotionPlanning/test/: CMakeLists.txt  Makefile  komo_planner_fixture.h  test_komo_hessian_decomposition.cpp  test_komo_initialization.cpp  test_komo_planner.cpp  test_komo_planner_display.cpp  test_matrix_manipulations.cpp  test_subtree_generators.cpp  test_tree_builder.cpp  trees.h
libs/MotionPlanning/test/data/: LGP-overtaking-double-agent-1w.po  LGP-real-time.g
libs/MultiAgentTaskPlanning/: CMakeLists.txt  constants.cpp  constants.h  decide_on_graph.cpp  decide_on_graph.h  decision_graph.cpp  decision_graph.h  decision_graph_printer.cpp  decision_graph_printer.h  graph_planner.cpp  graph_planner.h  logic_engine.cpp  logic_engine.h  logic_parser.cpp  logic_parser.h  value_iteration.cpp  value_iteration.h
libs/MultiAgentTaskPlanning/test/: CMakeLists.txt  test_decide_on_graph.cpp  test_decision_graph.cpp  test_graph_planner.cpp  test_logic_engine.cpp  test_logic_parser.cpp  test_value_iteration.cpp
libs/MultiAgentTaskPlanning/test/data/: LGP-blocks-fol-1w-model-2-unified.g  LGP-overtaking-agent-1.g  LGP-overtaking-double-agent-1w.g  LGP-overtaking-double-agent-2w-wrong-action-definitions.g  LGP-overtaking-double-agent-2w.g  LGP-overtaking-single-agent-1w.g  LGP-overtaking-single-agent-2w-wrong-belief-state-size.g  LGP-overtaking-single-agent-2w-wrong-probabilities.g  LGP-overtaking-single-agent-2w.g  LGP-overtaking.g  LGP-single-agent-2w-no-common-actions.g
libs/ObservationTasks/: CMakeLists.txt  observation_tasks.cpp  observation_tasks.h
libs/Optimization/: CMakeLists.txt  decentralized_lagrangian.h  decentralized_lagrangian.tpp  decentralized_optimizer.h  decentralized_optimizer.tpp  qp_lagrangian.h  qp_larangian.cpp  utils.cpp
libs/Optimization/include/Optimization/: decentralized_optimizer.tpp
libs/Optimization/test/: CMakeLists.txt  functions.cpp  qp_problems.cpp  test_dec_opt_constrained.cpp  test_opt_constrained.cpp  test_qp.cpp  test_utils.cpp
libs/POMTP_controllers/: CMakeLists.txt  joint_path_tamp_controller.cpp  joint_path_tamp_controller.h  markovian_tamp_controller.cpp  markovian_tamp_controller.h
libs/POMTP_controllers/test/: CMakeLists.txt
libs/TaskPlanning/: CMakeLists.txt  graph_printer.cpp  graph_printer.h  graph_search.cpp  graph_search.h  iterative_deepening.cpp  iterative_deepening.h  mcts_planner.cpp  mcts_planner.h  node_visitor.h  node_visitors.cpp  node_visitors.h  po_djikstra.cpp  po_djikstra.h  po_graph.cpp  po_graph.h  po_graph_node.cpp  po_graph_node.h  po_node.cpp  po_node.h  policy_builder.cpp  policy_builder.h  utility.h  yens.cpp  yens.h
libs/TaskPlanning/test/: CMakeLists.txt  test_djikstra.cpp  test_graph_build.cpp  test_yens.cpp
libs/TaskPlanning/test/data/: LGP-blocks-fol-easy-1w.g  LGP-blocks-fol-easy-2w.g  LGP-blocks-fol-model-2.g  LGP-blocks-fol.g  LGP-obs-container-fol.g  LGP-overtaking-1w.g  LGP-overtaking-2w.g  LGP-overtaking-3w.g  LGP-overtaking-kin-1w.g  LGP-overtaking-kin-2w.g  LGP-overtaking-kin-3w.g
(+231 files in other folders)
